objects/Entitlement_Process__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Case_BG__c</fullName>
        <label>Case BG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementId__c</fullName>
        <label>EntitlementId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PWB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PWB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Set Entitlement</label>
</CustomObject>